<resources>
    <string name="app_name">DrawerLayout</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="save_messages">Save Messages</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="telegram_features">Telegram Features</string>
    <string name="new_group">New Group</string>
    <string name="my_profile">My Profile</string>
    <string name="version_0_1">Version 0.1</string>
</resources>