<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main">
        <item android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/my_profile"/>
    </group>

    <group android:id="@+id/group_secondary">

        <item android:id="@+id/newgroup"
            android:icon="@drawable/ic_groups"
            android:title="@string/new_group"/>

        <item android:id="@+id/contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts"/>

        <item android:id="@+id/calls"
            android:icon="@drawable/ic_call"
            android:title="@string/calls"/>

        <item android:id="@+id/save"
            android:icon="@drawable/ic_savemsg"
            android:title="@string/save_messages"/>

        <item android:id="@+id/settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings"/>
    </group>

    <group android:id="@+id/group_thrid">

        <item android:id="@+id/invite"
            android:title="@string/invite_friends"
            android:icon="@drawable/ic_invite"/>

        <item android:id="@+id/features"
            android:title="@string/telegram_features"
            android:icon="@drawable/ic_features"/>
    </group>

</menu>